--- a/platformio.ini
+++ b/platformio.ini
@@ -32,6 +32,9 @@ lib_deps =
     https://github.com/MajicDesigns/MD_Parola.git
 lib_ldf_mode = deep
 monitor_port = /dev/cu.usbserial-141220
+; Build type set to `debug` for decoded exception stack traces.
+build_type = debug
+
 
 [env:nodemcu]
 board = nodemcuv2
@@ -53,3 +56,5 @@ lib_deps =
     https://github.com/MajicDesigns/MD_MAX72XX.git
     https://github.com/MajicDesigns/MD_Parola.git
 lib_ldf_mode = deep
+; Build type set to `debug` for decoded exception stack traces.
+build_type = debug
