--- a/config.json
+++ b/config.json
@@ -6,8 +6,16 @@
     "ENCRYPTED": true,
     "PASS": "NetworkPassword"
   },
-  "LED": {
-    "WIFI": "`D3`"
+  "PIN": {
+    "LED": {
+      "WIFI": "`D3`"
+    },
+    "MD_CS": 9,
+    "SD_CS": 0
+  },
+  "MD": {
+    "HARDWARE_TYPE": "`MD_MAX72XX::FC16_HW`",
+    "MAX_DEVICES": "`4`"
   },
   "TZ": {
     "DST": {
